fix: Remove timer item on mobile and desktop when the delete button is clicked

--- a/styles/components/_timer-menu-content.scss
+++ b/styles/components/_timer-menu-content.scss
@@ -1,11 +1,6 @@
 .timer-menu-content {
   .timer-menu-item {
-    display: none;
     margin-bottom: 12px;
-
-    &.is-active {
-      display: flex;
-    }
 
     &:last-child {
       margin-bottom: 0;
